yaml-service-loader-example: make it actually run
The LLM-authored skeleton compiled but didn't run end-to-end:

- pom passed --add-opens via exec:java's <arguments>, which feeds them
  to main(String[]) instead of the JVM. Switched to exec:exec so the
  forked JVM picks them up. Without the opens, Agrona UnsafeApi fails
  to access jdk.internal.misc.Unsafe on JDK 23.
- snakeyaml dep had been removed; transitive resolution pulled in 2.5,
  which rejects `!!fully.qualified.ClassName` global tags by default
  and broke the YAML config parse. Re-pinned 1.33 with a comment
  explaining the trigger.
- YamlLogHandler had no feed subscription. Dynamically-loaded
  processors don't get broadcast events auto-wired; added
  getContext().subscribeToNamedFeed(...) in start().
- YamlServiceLoaderExample used new File(url.getPath()) which breaks
  on paths with spaces or non-ASCII characters. Switched to
  Paths.get(url.toURI()).
- YAML config had a TODO/uncertainty comment; replaced with a clear
  header explaining what namedNodes/`!!` do.
- README expected output was fabricated ("Hello from YAML-loaded
  handler!") — the code sends "Event #0..4". Rewrote to match
  reality, document the exec:exec choice, the snakeyaml pin, and the
  mongoose >=1.0.9 requirement.
- Bumped mongoose.version to 1.0.9-SNAPSHOT in the parent pom to pick
  up the framework fix for late-registered processor agents.

Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>